# telamentis

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GOVERNANCE.md  LICENSE  Makefile  PR_TEMPLATE.md  README.md  ROADMAP.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: deploy-website.yml
adapters/in_memory/: Cargo.toml
adapters/in_memory/src/: lib.rs
adapters/neo4j/: Cargo.toml
adapters/neo4j/src/: config.rs  lib.rs  queries.rs  utils.rs
apps/website/: .gitignore  docusaurus.config.js  main.js  package.json  sidebars.js  styles.css  tsconfig.json  turbo.json
apps/website/css/: docs.css
apps/website/js/: docs.js
apps/website/src/components/HomepageFeatures/: index.tsx  styles.module.css
apps/website/src/css/: custom.css
apps/website/src/pages/: index.module.css  index.tsx
connectors/anthropic/: Cargo.toml
connectors/anthropic/src/: config.rs  lib.rs  models.rs
connectors/gemini/: Cargo.toml
connectors/gemini/src/: config.rs  lib.rs  models.rs
connectors/openai/: Cargo.toml
connectors/openai/src/: config.rs  lib.rs  models.rs
core/: Cargo.toml
core/src/: errors.rs  lib.rs  pipeline.rs  temporal.rs  tenant.rs  traits.rs  types.rs
docs/: advanced_temporal_reasoning.md  agent_integration_patterns.md  architecture.md  core_concepts.md  getting_started.md  lifecycle-and-plugins.md  llm_extraction.md  middleware.md  multi_tenancy.md  observability_guide.md  plugin_development.md  recall-plugin.md  request_processing_pipeline.md  schema_design_guide.md  security_hardening_guide.md  story_of_tela_mentis.md  temporal_semantics.md
kgctl/: Cargo.toml  README.md  multiple-llm-client.md
kgctl/src/: cli.rs  client.rs  config.rs  main.rs  output.rs
kgctl/src/commands/: export.rs  health.rs  ingest.rs  mod.rs  query.rs  tenant.rs
presentation/fastapi-bridge/: Cargo.toml  Dockerfile  main.py
presentation/fastapi-bridge/src/: lib.rs  middleware.rs  models.rs
presentation/fastapi-bridge/src/handlers/: graph.rs  health.rs  llm.rs  mod.rs  tenant.rs
presentation/grpc/: Cargo.toml  build.rs
presentation/grpc/proto/: telamentis.proto
presentation/grpc/src/: lib.rs
presentation/uds/: Cargo.toml
presentation/uds/src/: lib.rs  protocol.rs  service.rs
website/.docusaurus/: globalData.json  registry.js  routes.js  routesChunkNames.json
website/.docusaurus/docusaurus-plugin-content-docs/default/: site-docs-core-concepts-md-86b.json  site-docs-security-hardening-guide-md-169.json
website/.docusaurus/docusaurus-plugin-content-docs/default/p/: tela-mentis-docs-8c7.json
website/.docusaurus/docusaurus-plugin-debug/default/p/: tela-mentis-docusaurus-debug-content-b28.json
