[package]
name = "telamentis-adapter-in-memory"
version = "0.1.0"
edition = "2021"
authors = ["TelaMentis Contributors"]
description = "In-memory adapter for TelaMentis GraphStore trait"
license = "MIT"

[dependencies]
telamentis-core = { path = "../../core" }
tokio = { workspace = true, features = ["sync"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"