[package]
name = "telamentis-connector-openai"
version = "0.1.0"
edition = "2021"
authors = ["TelaMentis Contributors"]
description = "OpenAI connector for TelaMentis LLM operations"
license = "MIT"

[dependencies]
telamentis-core = { path = "../../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"