[package]
name = "telamentis-fastapi-bridge"
version = "0.1.0"
edition = "2021"
authors = ["TelaMentis Contributors"]
description = "FastAPI bridge for TelaMentis presentation layer"
license = "MIT"

[dependencies]
telamentis-core = { path = "../../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# HTTP server
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"