[package]
name = "telamentis-presentation-grpc"
version = "0.1.0"
edition = "2021"
authors = ["TelaMentis Contributors"]
description = "gRPC presentation adapter for TelaMentis"
license = "MIT"

[dependencies]
telamentis-core = { path = "../../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

# gRPC specific
tonic = "0.10"
prost = "0.12"
prost-types = "0.12"
tokio-stream = { version = "0.1", features = ["net"] }

[build-dependencies]
tonic-build = "0.10"
prost-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"